--- a/app/src/main/res/layout/activity_lib_service.xml
+++ b/app/src/main/res/layout/activity_lib_service.xml
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_info"
-                android:src="@mipmap/infobits"
+                android:src="@mipmap/cwl"
                 android:onClick="onClickBulletin"
                 android:scaleType="fitCenter"
                 android:minHeight="120dp"
@@ -56,7 +56,7 @@
                 android:clickable="true"
                 android:background="#211d70"
                 android:layout_marginTop="46dp"
-                android:scaleType="fitCenter"
+                android:scaleType="fitXY"
                 android:minHeight="120dp"
                 android:minWidth="120dp"
                 android:layout_alignParentTop="true"
@@ -64,6 +64,34 @@
                 android:layout_toEndOf="@+id/imgbt_service4"
                 android:layout_marginLeft="34dp"
                 android:layout_marginStart="34dp" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imgbt_service4"
+                android:onClick="onClickEB"
+                android:src="@mipmap/lost"
+                android:background="#211d70"
+                android:layout_below="@+id/imgbt_info"
+                android:layout_margin="25dp"
+                android:minHeight="120dp"
+                android:minWidth="120dp"
+                />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imgbt_service5"
+                android:onClick="onClickIR"
+                android:src="@drawable/irxii"
+                android:background="#211d70"
+                android:layout_alignTop="@+id/imgbt_service4"
+                android:minHeight="120dp"
+                android:minWidth="120dp"
+                android:layout_alignRight="@+id/imgbt_news"
+                android:layout_alignEnd="@+id/imgbt_news"
+                android:layout_alignLeft="@+id/imgbt_news"
+                android:layout_alignStart="@+id/imgbt_news" />
         </RelativeLayout>
 
 
