--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -18,7 +18,7 @@
         android:textSize="20dp"
         android:textStyle="bold"
         android:padding="5dp"
-        android:id="@+id/name"
+        android:id="@+id/brand"
         android:layout_alignRight="@+id/email"
         android:layout_alignEnd="@+id/email"
         android:textColor="@color/colorPrimaryDark" />
@@ -28,7 +28,7 @@
         android:layout_height="match_parent"
         android:text=""
         android:layout_toRightOf="@+id/profile"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/brand"
         android:textSize="16sp"
         android:textStyle="bold"
         android:padding="5dp"
