--- a/app/src/main/res/layout/user_register.xml
+++ b/app/src/main/res/layout/user_register.xml
@@ -65,7 +65,7 @@
             <EditText
                 android:layout_width="350dp"
                 android:layout_height="40dp"
-                android:id="@+id/name"
+                android:id="@+id/brand"
                 android:layout_gravity="right"
                 android:textColor="@color/colorPrimaryDark"
                 android:background="#fff"
@@ -89,7 +89,7 @@
                 android:padding="5dp"
                 android:textSize="25sp"
                 android:hint="BITS ID/ PSRN No."
-                android:layout_below="@+id/name"
+                android:layout_below="@+id/brand"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_alignRight="@+id/title"
