--- a/app/src/main/res/layout/activity_lfms_all_items.xml
+++ b/app/src/main/res/layout/activity_lfms_all_items.xml
@@ -20,7 +20,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_collapseMode="pin"
             app:logo="@drawable/lost"
-            android:title="@string/title_activity_ebooks"
+            android:title="@string/lost_and_found"
             android:textColor="#fff"/>
 
     </android.support.design.widget.AppBarLayout>
