--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -25,8 +25,7 @@
         android:padding="10dp"
         android:layout_below="@+id/name"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="gfjjdhg" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/name"
@@ -39,19 +38,22 @@
         android:layout_alignParentStart="true"
         android:textStyle="bold"
         android:textColor="@color/colorPrimaryDark"
-        android:padding="10dp"
-        android:text="ghcgfjddgh" />
+        android:padding="10dp" />
 
     <TextView
         android:id="@+id/claimed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Claimed"
-        android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
         android:padding="5dp"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
+        android:layout_alignBottom="@+id/brand"
+        android:gravity="center_vertical|center_horizontal"
+        android:background="@color/colorPrimaryDark"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:visibility="gone" />
 
 </RelativeLayout>
