--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,7 +12,7 @@
         <item
             android:id="@+id/os_id"
             android:title="@string/drawer_menu_os"
-            android:icon="@drawable/osx"
+            android:icon="@mipmap/os"
             />
         <item
             android:id="@+id/comm_id"
@@ -35,7 +35,7 @@
         <item
             android:id="@+id/lf_id"
             android:title="@string/drawer_menu_lf"
-            android:icon="@drawable/lostandfound"
+            android:icon="@mipmap/lf"
             >
         </item>
     </group>
@@ -50,13 +50,13 @@
         <item
             android:id="@+id/eb_id"
             android:title="@string/title_activity_ebooks"
-            android:icon="@drawable/ebxx"
+            android:icon="@drawable/ebxii"
             />
 
         <item
             android:id="@+id/od_id"
             android:title="@string/drawer_menu_odb"
-            android:icon="@drawable/odxx"
+            android:icon="@drawable/odxii"
             />
 
         <item
