--- a/app/src/main/res/layout/activity_claim.xml
+++ b/app/src/main/res/layout/activity_claim.xml
@@ -6,7 +6,7 @@
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:id="@+id/nav_toolbar" app:logo="@mipmap/lost"
+        android:id="@+id/nav_toolbar" app:logo="@mipmap/lf"
         android:title="@string/claim_lost_item"
         android:textColor="#fff"
         android:background="@color/colorPrimaryDark"
