--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -60,11 +60,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/taylorFrancis"
-                android:src="@drawable/osx"
+                android:src="@mipmap/os"
                 android:onClick="onClickOs"
                 android:padding="0dp"
                 android:clickable="true"
-                android:layout_margin="12dip" />
+                android:layout_margin="12dip"
+                android:background="@color/colorPrimaryDark"
+                android:minHeight="96dp"
+                android:minWidth="96dp"
+                android:scaleType="fitCenter" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -78,7 +82,8 @@
                 android:minWidth="96dip"
                 android:minHeight="96dip"
                 android:scaleType="fitCenter"
-                android:layout_margin="12dip" />
+                android:layout_margin="12dip"
+                android:background="@color/colorPrimaryDark" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -92,7 +97,8 @@
                 android:layout_toRightOf="@+id/scienceDirect"
                 android:scaleType="fitCenter"
                 android:minWidth="96dp"
-                android:minHeight="96dp" />
+                android:minHeight="96dp"
+                android:background="@color/colorPrimaryDark" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -123,7 +129,8 @@
                 android:layout_margin="12dp"
                 android:scaleType="fitCenter"
                 android:minHeight="96dp"
-                android:minWidth="96dp" />
+                android:minWidth="96dp"
+                android:background="@color/colorPrimaryDark" />
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -137,7 +144,8 @@
                 android:layout_toRightOf="@+id/springer"
                 android:minHeight="96dp"
                 android:minWidth="96dp"
-                android:scaleType="fitCenter" />
+                android:scaleType="fitCenter"
+                android:background="@color/colorPrimaryDark" />
         </RelativeLayout>
 
         <TextView
