--- a/app/src/main/res/layout/activity_lfms_all_items.xml
+++ b/app/src/main/res/layout/activity_lfms_all_items.xml
@@ -19,7 +19,7 @@
             android:layout_height="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_collapseMode="pin"
-            app:logo="@drawable/lost"
+            app:logo="@mipmap/lf"
             android:title="@string/lost_and_found"
             android:textColor="#fff"/>
 
