Some Fixes and Final Images

--- a/app/src/main/res/layout/activity_lib_service.xml
+++ b/app/src/main/res/layout/activity_lib_service.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_info"
                 android:src="@mipmap/cwl"
-                android:onClick="onClickBulletin"
+                android:onClick="onClickCWL"
                 android:scaleType="fitCenter"
                 android:minHeight="120dp"
                 android:minWidth="120dp"
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_news"
                 android:src="@mipmap/dn"
-                android:onClick="onClickDailyNews"
+                android:onClick="onClickDN"
                 android:clickable="true"
                 android:background="#211d70"
                 android:layout_marginTop="46dp"
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_service4"
-                android:onClick="onClickEB"
+                android:onClick="onClickLF"
                 android:src="@mipmap/lf"
                 android:background="#211d70"
                 android:layout_below="@+id/imgbt_info"
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_service5"
-                android:onClick="onClickIR"
+                android:onClick="onClickIBB"
                 android:src="@mipmap/ibb"
                 android:background="#211d70"
                 android:layout_alignTop="@+id/imgbt_service4"
