--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,19 +17,8 @@
         android:visibility="gone" />
 
     <TextView
-        android:id="@+id/brand"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="17dip"
-        android:textColor="@color/colorPrimaryDark"
-        android:padding="10dp"
-        android:layout_below="@+id/name"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:id="@+id/name"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
         android:textSize="20dp"
@@ -48,12 +37,12 @@
         android:padding="5dp"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:layout_alignBottom="@+id/brand"
         android:gravity="center_vertical|center_horizontal"
         android:background="@color/colorPrimaryDark"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_below="@+id/name"
+        android:layout_alignLeft="@+id/name"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp" />
 
 </RelativeLayout>
