SQL Functionality added to infobits

--- a/app/src/main/res/layout/custom_fragmet.xml
+++ b/app/src/main/res/layout/custom_fragmet.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:orientation="vertical"
+        >
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,14 +19,26 @@
         android:id="@+id/textView11"
         android:layout_gravity="center_horizontal" />
 
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="129dp"
+        android:layout_height="match_parent"
         android:id="@+id/newArrivalsGrid"
         android:layout_gravity="center_horizontal"
         android:numColumns="4"
-        android:layout_weight="0.57" />
-
+     />
+    </HorizontalScrollView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:orientation="vertical"
+        >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,11 +46,16 @@
         android:text="Journals"
         android:id="@+id/textView12"
         android:layout_gravity="center_horizontal" />
-
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="137dp"
+        android:layout_height="match_parent"
         android:id="@+id/journalsGrid"
         android:numColumns="4"
-        android:layout_weight="0.33" />
+         />
+    </HorizontalScrollView>
+        </LinearLayout>
 </LinearLayout>
