InfoBITS Data and Fixes

--- a/app/src/main/res/layout/infobits_customcell.xml
+++ b/app/src/main/res/layout/infobits_customcell.xml
@@ -5,14 +5,13 @@
 
     android:orientation="vertical" >
 
-    <com.android.volley.toolbox.NetworkImageView
+    <ImageView
         android:id="@+id/bookImage"
         android:layout_gravity="center"
         android:layout_width="88dp"
         android:layout_height="88dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:src="@drawable/ebxii" />
+        android:layout_marginBottom="5dp" />
 
     <TextView
         android:id="@+id/bookTitle"
