--- a/app/src/main/res/layout/content_user_settings.xml
+++ b/app/src/main/res/layout/content_user_settings.xml
@@ -24,7 +24,7 @@
                 android:layout_height="match_parent"
                 android:weightSum="1">
 
-                <com.android.volley.toolbox.NetworkImageView
+                <ImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_above="@+id/textView4"
