--- a/app/src/main/res/layout/infobits_customcell.xml
+++ b/app/src/main/res/layout/infobits_customcell.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
 
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/bookImage"
         android:layout_gravity="center"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" />
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:src="@drawable/cover"
+        android:scaleType="fitCenter" />
 
-    <TextView
-        android:id="@+id/bookTitle"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:text="TextView" />
+    <!--<TextView-->
+        <!--android:id="@+id/bookTitle"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="15dp"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:layout_marginBottom="5dp"-->
+        <!--android:text="TextView" />-->
 
 </LinearLayout>
